FilesClient fix -- list_folder, creater_folder, delete_folder (#212)
Updated the FilesClient to the latest .yaml interface, fixing
list_folder to work with it.
create_folder and delete_folder now work as well.

---------
